--- a/notebooks/mult_repair_levels_law_school/Law_School_Batch1-Copy4.ipynb
+++ b/notebooks/mult_repair_levels_law_school/Law_School_Batch1-Copy4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "fce0a6f7",
+   "id": "80ad90f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4c0d0ecf",
+   "id": "8d970f96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c40e37cd",
+   "id": "4e17ef19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c995c48b",
+   "id": "5e40d671",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "24e1c456",
+   "id": "b60f5b7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,8 +56,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "b21fd0c6",
+   "execution_count": 35,
+   "id": "53575314",
    "metadata": {},
    "outputs": [
     {
@@ -77,8 +77,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "fea7efb0",
+   "execution_count": 36,
+   "id": "aa760638",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,8 +90,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "d3c55ea2",
+   "execution_count": 37,
+   "id": "259d61e1",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70481fd6",
+   "id": "e084ef18",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -120,8 +120,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "96c3c0ab",
+   "execution_count": 38,
+   "id": "eba57038",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b83d88e",
+   "id": "70612dd5",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -148,8 +148,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "0edec3a9",
+   "execution_count": 39,
+   "id": "1eb08a07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
     "DB_COLLECTION_NAME = 'exp_mult_repair_levels'\n",
     "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME)\n",
     "# FAIR_INTERVENTION_PARAMS_LST = [0.0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0]\n",
-    "FAIR_INTERVENTION_PARAMS_LST = [0.1, 0.3]\n",
+    "FAIR_INTERVENTION_PARAMS_LST = [1.0]\n",
     "\n",
     "config_yaml_path = os.path.join(ROOT_DIR, 'notebooks', EXPERIMENT_NAME, 'law_school_2018_config.yaml')\n",
     "metrics_computation_config = create_config_obj(config_yaml_path=config_yaml_path)"
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e14bbef1",
+   "id": "8e0c802c",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -175,8 +175,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "6640fe43",
+   "execution_count": 40,
+   "id": "7406de70",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
        "'fairness_variance'"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,8 +200,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "17002fc4",
+   "execution_count": 41,
+   "id": "a1802d61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,8 +212,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "3e7a8721",
+   "execution_count": 42,
+   "id": "a4fe4334",
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4f4a089",
+   "id": "a3fbf736",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -244,8 +244,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "1c93e4a4",
+   "execution_count": 43,
+   "id": "07a5abb5",
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
        "4  White  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,8 +385,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "1f67b910",
+   "execution_count": 44,
+   "id": "dda9e73c",
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
        "(20798, 11)"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,8 +406,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "00b379f3",
+   "execution_count": 45,
+   "id": "39634467",
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,8 +438,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "3ebd9b77",
+   "execution_count": 46,
+   "id": "75612f39",
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
        "Name: pass_bar, dtype: int64"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,8 +461,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "id": "f60a895e",
+   "execution_count": 47,
+   "id": "65b6b364",
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
        "Name: race, dtype: int64"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,8 +484,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "7a1d82e9",
+   "execution_count": 48,
+   "id": "07422178",
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +496,7 @@
        "Name: male, dtype: int64"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2ea2bd7",
+   "id": "ed0dbb3a",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2919d28d",
+   "id": "c216f632",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -523,8 +523,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "id": "56e68836",
+   "execution_count": 49,
+   "id": "b3525eb8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,8 +535,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "id": "6e5ea3b3",
+   "execution_count": 50,
+   "id": "76e58479",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,15 +551,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "id": "c715c444",
+   "execution_count": 51,
+   "id": "8aaf9441",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-08-06 15:52:20 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2023-08-06 15:53:04 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -569,7 +569,7 @@
      "text": [
       "{'dataset_split_seed': 100,\n",
       " 'experiment_iteration': 'Exp_iter_1',\n",
-      " 'fair_intervention_params_lst': '[0.1, 0.3]',\n",
+      " 'fair_intervention_params_lst': '[1.0]',\n",
       " 'model_init_seed': 100,\n",
       " 'session_uuid': '9430484b-bec6-42a0-ac65-11c53446a61f'}\n",
       "\n",
@@ -580,7 +580,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-08-06 15:52:20 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2023-08-06 15:53:04 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -601,12 +601,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8ce0b7c840cf42c483246532114ab7c0",
+       "model_id": "f80992b87d784ed7b0960dd6358655eb",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Multiple alphas:   0%|          | 0/2 [00:00<?, ?it/s]"
+       "Multiple alphas:   0%|          | 0/1 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -616,15 +616,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.1\n",
-      "2023/08/06, 15:52:22: Tuning RandomForestClassifier...\n"
+      "intervention_param:  1.0\n",
+      "2023/08/06, 15:53:05: Tuning RandomForestClassifier...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-08-06 15:58:40 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2023-08-06 15:59:26 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
@@ -632,14 +632,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023/08/06, 15:58:40: Tuning for RandomForestClassifier is finished [F1 score = 0.6426024902408707, Accuracy = 0.8900641025641026]\n",
+      "2023/08/06, 15:59:26: Tuning for RandomForestClassifier is finished [F1 score = 0.639040822895029, Accuracy = 0.889423076923077]\n",
       "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "81b5e596be904c8e882647a123089b32",
+       "model_id": "abeb687c484e446ea301601ee46e4944",
        "version_major": 2,
        "version_minor": 0
       },
@@ -653,7 +653,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "35f78738004546a49ff06d5058f9c40d",
+       "model_id": "41d7f2c17c0f47bc901c5c6942e8bca4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -667,59 +667,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9a4ca16074fc46eaa6e1915f07602c6c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Classifiers testing by bootstrap:   0%|          | 0/200 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "intervention_param:  0.3\n",
-      "2023/08/06, 16:24:58: Tuning RandomForestClassifier...\n",
-      "2023/08/06, 16:31:10: Tuning for RandomForestClassifier is finished [F1 score = 0.6450669297827822, Accuracy = 0.8963141025641025]\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0d22e4b6678c4331b4bbc2fd0a29a710",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Multiple runs progress:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "067553a5a63e40aca909e9f09c5b2e48",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Analyze models in one run:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1325afbfad9e4072aac2a78e178ccc67",
+       "model_id": "2f22ab23b64a497eb3dfc1bfe3fc18eb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -749,7 +697,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0c993d0",
+   "id": "0442e266",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -758,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "11b13ab1",
+   "id": "8f855e58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -783,7 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "cbb88cbe",
+   "id": "be19d5de",
    "metadata": {},
    "outputs": [
     {
@@ -1131,7 +1079,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3dd81bd2",
+   "id": "02b0285c",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -1140,7 +1088,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7268abe7",
+   "id": "b9fd6677",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1165,7 +1113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00b2300e",
+   "id": "31e05297",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1186,7 +1134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f39f4f4",
+   "id": "34ba2f78",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -1195,7 +1143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2039493e",
+   "id": "94b06c09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1220,7 +1168,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "b46cf8c6",
+   "id": "dc4678c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1241,7 +1189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7a767b4",
+   "id": "582aac9b",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -1250,7 +1198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d16469a",
+   "id": "29d05794",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1275,7 +1223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9823a53a",
+   "id": "47bb43dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1296,7 +1244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b40ee99c",
+   "id": "f2f619c7",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1305,7 +1253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09bf9582",
+   "id": "8407f91b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1330,7 +1278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e66df40e",
+   "id": "9b8ef367",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1352,7 +1300,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3b3af63",
+   "id": "36d5e7e4",
    "metadata": {},
    "outputs": [],
    "source": []
