--- a/notebooks/Demography_Composition.ipynb
+++ b/notebooks/Demography_Composition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 59,
    "metadata": {
     "collapsed": true
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 60,
    "outputs": [],
    "source": [
     "import os\n",
@@ -38,13 +38,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 61,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current location:  /home/denys_herasymuk/UCU/4course_2term\n"
+      "Current location:  /home/denys_herasymuk\n"
      ]
     }
    ],
@@ -61,12 +61,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 62,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "from virny.datasets.data_loaders import ACSIncomeDataset\n",
+    "from virny.datasets.data_loaders import ACSPublicCoverageDataset\n",
     "from virny.utils.protected_groups_partitioning import create_test_protected_groups"
    ],
    "metadata": {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 63,
    "outputs": [],
    "source": [
     "def get_proportions(protected_groups, X_data):\n",
@@ -98,17 +98,8 @@
    }
   },
   {
-   "cell_type": "markdown",
-   "source": [
-    "## ACSIncome"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 64,
    "outputs": [],
    "source": [
     "sensitive_attributes_dct = {'SEX': '2', 'RAC1P': ['2', '3', '4', '5', '6', '7', '8', '9'], 'SEX & RAC1P': None}"
@@ -119,20 +110,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 65,
    "outputs": [
     {
      "data": {
-      "text/plain": "  SCHL COW MAR  OCCP POBP RELP SEX RAC1P  AGEP  WKHP\n0   23   7   3   230   36    0   1     1    55  55.0\n1   16   1   5  4110   13    2   2     1    20  35.0\n2   16   4   3  4130   51    0   2     1    59  30.0\n3   18   4   1  4020   13    0   1     2    43  40.0\n4   14   1   1  8300   20    1   2     2    33  20.0",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>SCHL</th>\n      <th>COW</th>\n      <th>MAR</th>\n      <th>OCCP</th>\n      <th>POBP</th>\n      <th>RELP</th>\n      <th>SEX</th>\n      <th>RAC1P</th>\n      <th>AGEP</th>\n      <th>WKHP</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>23</td>\n      <td>7</td>\n      <td>3</td>\n      <td>230</td>\n      <td>36</td>\n      <td>0</td>\n      <td>1</td>\n      <td>1</td>\n      <td>55</td>\n      <td>55.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>16</td>\n      <td>1</td>\n      <td>5</td>\n      <td>4110</td>\n      <td>13</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>20</td>\n      <td>35.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>16</td>\n      <td>4</td>\n      <td>3</td>\n      <td>4130</td>\n      <td>51</td>\n      <td>0</td>\n      <td>2</td>\n      <td>1</td>\n      <td>59</td>\n      <td>30.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>18</td>\n      <td>4</td>\n      <td>1</td>\n      <td>4020</td>\n      <td>13</td>\n      <td>0</td>\n      <td>1</td>\n      <td>2</td>\n      <td>43</td>\n      <td>40.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>14</td>\n      <td>1</td>\n      <td>1</td>\n      <td>8300</td>\n      <td>20</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>33</td>\n      <td>20.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "  SCHL MAR SEX DIS ESP CIT MIG MIL ANC NATIVITY DEAR DEYE DREM ESR ST FER  \\\n0   19   5   1   2   0   1   3   4   1        1    2    2    2   6  6   0   \n1   16   5   1   2   0   3   3   4   4        1    2    2    2   1  6   0   \n2   13   5   2   2   1   1   1   0   2        1    2    2    2   6  6   2   \n3   20   1   2   2   0   4   1   4   1        2    2    2    2   6  6   2   \n4   16   1   2   2   0   4   1   4   1        2    2    2    2   6  6   0   \n\n  RAC1P  AGEP   PINCP  \n0     1    21  3150.0  \n1     9    18  1600.0  \n2     1    16     0.0  \n3     8    43     0.0  \n4     6    54     0.0  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>SCHL</th>\n      <th>MAR</th>\n      <th>SEX</th>\n      <th>DIS</th>\n      <th>ESP</th>\n      <th>CIT</th>\n      <th>MIG</th>\n      <th>MIL</th>\n      <th>ANC</th>\n      <th>NATIVITY</th>\n      <th>DEAR</th>\n      <th>DEYE</th>\n      <th>DREM</th>\n      <th>ESR</th>\n      <th>ST</th>\n      <th>FER</th>\n      <th>RAC1P</th>\n      <th>AGEP</th>\n      <th>PINCP</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>19</td>\n      <td>5</td>\n      <td>1</td>\n      <td>2</td>\n      <td>0</td>\n      <td>1</td>\n      <td>3</td>\n      <td>4</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>6</td>\n      <td>6</td>\n      <td>0</td>\n      <td>1</td>\n      <td>21</td>\n      <td>3150.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>16</td>\n      <td>5</td>\n      <td>1</td>\n      <td>2</td>\n      <td>0</td>\n      <td>3</td>\n      <td>3</td>\n      <td>4</td>\n      <td>4</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>6</td>\n      <td>0</td>\n      <td>9</td>\n      <td>18</td>\n      <td>1600.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>13</td>\n      <td>5</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>0</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>6</td>\n      <td>6</td>\n      <td>2</td>\n      <td>1</td>\n      <td>16</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>20</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>0</td>\n      <td>4</td>\n      <td>1</td>\n      <td>4</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>6</td>\n      <td>6</td>\n      <td>2</td>\n      <td>8</td>\n      <td>43</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>16</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>0</td>\n      <td>4</td>\n      <td>1</td>\n      <td>4</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>6</td>\n      <td>6</td>\n      <td>0</td>\n      <td>6</td>\n      <td>54</td>\n      <td>0.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 29,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_loader = ACSIncomeDataset(state=['GA'], year=2018, with_nulls=False, subsample_size=15_000, subsample_seed=42)\n",
+    "data_loader = ACSPublicCoverageDataset(state=['CA'], year=2018, with_nulls=False, subsample_size=15_000, subsample_seed=42)\n",
     "data_loader.full_df.head()"
    ],
    "metadata": {
@@ -141,13 +132,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 66,
    "outputs": [
     {
      "data": {
-      "text/plain": "(15000, 10)"
+      "text/plain": "(15000, 19)"
      },
-     "execution_count": 30,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,13 +152,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 67,
    "outputs": [
     {
      "data": {
-      "text/plain": "1    7669\n2    7331\nName: SEX, dtype: int64"
+      "text/plain": "2    8329\n1    6671\nName: SEX, dtype: int64"
      },
-     "execution_count": 31,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 68,
    "outputs": [],
    "source": [
     "protected_groups = create_test_protected_groups(data_loader.X_data, data_loader.X_data, sensitive_attributes_dct)"
@@ -192,18 +183,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 69,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SEX_priv: 7669\n",
-      "SEX_dis: 7331\n",
-      "RAC1P_priv: 10163\n",
-      "RAC1P_dis: 4837\n",
-      "SEX&RAC1P_priv: 12431\n",
-      "SEX&RAC1P_dis: 2569\n"
+      "SEX_priv: 6671\n",
+      "SEX_dis: 8329\n",
+      "RAC1P_priv: 8478\n",
+      "RAC1P_dis: 6522\n",
+      "SEX&RAC1P_priv: 11415\n",
+      "SEX&RAC1P_dis: 3585\n"
      ]
     }
    ],
@@ -217,13 +208,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 70,
    "outputs": [
     {
      "data": {
       "text/plain": "dict_keys(['SEX_priv', 'SEX_dis', 'RAC1P_priv', 'RAC1P_dis', 'SEX&RAC1P_priv', 'SEX&RAC1P_dis'])"
      },
-     "execution_count": 34,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,18 +228,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 71,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SEX_priv: 0.511\n",
-      "SEX_dis: 0.489\n",
-      "RAC1P_priv: 0.678\n",
-      "RAC1P_dis: 0.322\n",
-      "SEX&RAC1P_priv: 0.829\n",
-      "SEX&RAC1P_dis: 0.171\n"
+      "SEX_priv: 0.445\n",
+      "SEX_dis: 0.555\n",
+      "RAC1P_priv: 0.565\n",
+      "RAC1P_dis: 0.435\n",
+      "SEX&RAC1P_priv: 0.761\n",
+      "SEX&RAC1P_dis: 0.239\n"
      ]
     }
    ],
@@ -261,19 +252,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 72,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SEX_priv: 0.422\n",
-      "SEX_dis: 0.274\n",
-      "RAC1P_priv: 0.389\n",
-      "RAC1P_dis: 0.267\n",
+      "SEX_priv: 0.395\n",
+      "SEX_dis: 0.357\n",
+      "RAC1P_priv: 0.363\n",
+      "RAC1P_dis: 0.388\n",
       "SEX&RAC1P_priv: 0.374\n",
-      "SEX&RAC1P_dis: 0.232\n",
-      "overall: 0.35\n"
+      "SEX&RAC1P_dis: 0.374\n",
+      "overall: 0.374\n"
      ]
     }
    ],
@@ -286,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 72,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -295,13 +286,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 73,
    "outputs": [
     {
      "data": {
-      "text/plain": "0    1\n3    0\n5    1\n6    1\n7    0\nName: PINCP, dtype: int64"
+      "text/plain": "0    0\n1    0\n5    1\n6    1\n7    0\nName: PUBCOV, dtype: int64"
      },
-     "execution_count": 37,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,13 +306,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 74,
    "outputs": [
     {
      "data": {
       "text/plain": "dtype('int64')"
      },
-     "execution_count": 38,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 75,
    "outputs": [],
    "source": [
     "filtered_df = data_loader.y_data.iloc[protected_groups['SEX_priv'].index].copy(deep=True)\n",
@@ -347,13 +338,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 76,
    "outputs": [
     {
      "data": {
-      "text/plain": "0.4219585343591081"
+      "text/plain": "0.3951431569479838"
      },
-     "execution_count": 40,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,13 +358,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 77,
    "outputs": [
     {
      "data": {
-      "text/plain": "3236"
+      "text/plain": "2636"
      },
-     "execution_count": 41,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,13 +378,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 78,
    "outputs": [
     {
      "data": {
-      "text/plain": "7669"
+      "text/plain": "6671"
      },
-     "execution_count": 42,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 78,
    "outputs": [],
    "source": [],
    "metadata": {
