Added visualizations for all datasets

--- a/notebooks/mult_repair_levels_income_GA/Folk_GA_2018_Batch1.ipynb
+++ b/notebooks/mult_repair_levels_income_GA/Folk_GA_2018_Batch1.ipynb
@@ -12,9 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "2b71b753",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-12T09:08:47.550098Z",
+     "start_time": "2023-10-12T09:08:47.541693Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# !pip uninstall virny -y"
@@ -22,9 +27,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "2f671c36",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-12T09:09:10.975230Z",
+     "start_time": "2023-10-12T09:09:10.972295Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Install using an HTTP link\n",
@@ -462,9 +472,7 @@
       " 'experiment_iteration': 'Exp_iter_1',\n",
       " 'fair_intervention_params_lst': '[0.0, 0.1, 0.2, 0.3]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': '26beff01-939d-4d98-be67-65b150b352b2'}\n",
-      "\n",
-      "\n"
+      " 'session_uuid': '26beff01-939d-4d98-be67-65b150b352b2'}\n"
      ]
     },
     {
@@ -523,8 +531,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023/07/22, 20:51:25: Tuning for RandomForestClassifier is finished [F1 score = 0.7781106614210981, Accuracy = 0.806]\n",
-      "\n"
+      "2023/07/22, 20:51:25: Tuning for RandomForestClassifier is finished [F1 score = 0.7781106614210981, Accuracy = 0.806]\n"
      ]
     },
     {
@@ -575,8 +582,7 @@
      "text": [
       "intervention_param:  0.1\n",
       "2023/07/22, 21:15:27: Tuning RandomForestClassifier...\n",
-      "2023/07/22, 21:36:08: Tuning for RandomForestClassifier is finished [F1 score = 0.7780827741572397, Accuracy = 0.8055555555555557]\n",
-      "\n"
+      "2023/07/22, 21:36:08: Tuning for RandomForestClassifier is finished [F1 score = 0.7780827741572397, Accuracy = 0.8055555555555557]\n"
      ]
     },
     {
@@ -627,8 +633,7 @@
      "text": [
       "intervention_param:  0.2\n",
       "2023/07/22, 21:50:10: Tuning RandomForestClassifier...\n",
-      "2023/07/22, 22:11:38: Tuning for RandomForestClassifier is finished [F1 score = 0.7775113312465664, Accuracy = 0.8051111111111111]\n",
-      "\n"
+      "2023/07/22, 22:11:38: Tuning for RandomForestClassifier is finished [F1 score = 0.7775113312465664, Accuracy = 0.8051111111111111]\n"
      ]
     },
     {
@@ -679,8 +684,7 @@
      "text": [
       "intervention_param:  0.3\n",
       "2023/07/22, 23:45:09: Tuning RandomForestClassifier...\n",
-      "2023/07/23, 00:06:07: Tuning for RandomForestClassifier is finished [F1 score = 0.7790724055901435, Accuracy = 0.806]\n",
-      "\n"
+      "2023/07/23, 00:06:07: Tuning for RandomForestClassifier is finished [F1 score = 0.7790724055901435, Accuracy = 0.806]\n"
      ]
     },
     {
@@ -798,9 +802,7 @@
       " 'experiment_iteration': 'Exp_iter_2',\n",
       " 'fair_intervention_params_lst': '[0.0, 0.1, 0.2, 0.3, 0.4, 0.5]',\n",
       " 'model_init_seed': 200,\n",
-      " 'session_uuid': '26beff01-939d-4d98-be67-65b150b352b2'}\n",
-      "\n",
-      "\n"
+      " 'session_uuid': '26beff01-939d-4d98-be67-65b150b352b2'}\n"
      ]
     },
     {
