Tested on demo ex

--- a/notebooks/out_of_domain_uncertainty_rich_income/Income_2018.ipynb
+++ b/notebooks/out_of_domain_uncertainty_rich_income/Income_2018.ipynb
@@ -21,8 +21,8 @@
    "id": "dc1a02c2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-14T11:12:45.236528Z",
-     "start_time": "2023-10-14T11:12:45.235450Z"
+     "end_time": "2023-10-14T21:04:02.299023Z",
+     "start_time": "2023-10-14T21:04:02.292727Z"
     }
    },
    "outputs": [],
@@ -32,12 +32,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "0ba1b62f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-14T11:12:45.242225Z",
-     "start_time": "2023-10-14T11:12:45.236791Z"
+     "end_time": "2023-10-14T21:04:17.686058Z",
+     "start_time": "2023-10-14T21:04:17.678833Z"
     }
    },
    "outputs": [],
@@ -51,12 +51,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "cfdf9ef6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-14T11:12:45.246412Z",
-     "start_time": "2023-10-14T11:12:45.239220Z"
+     "end_time": "2023-10-14T21:04:20.056520Z",
+     "start_time": "2023-10-14T21:04:20.054334Z"
     }
    },
    "outputs": [],
@@ -66,12 +66,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "879074b3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-14T11:12:47.805269Z",
-     "start_time": "2023-10-14T11:12:47.792127Z"
+     "end_time": "2023-10-14T21:04:20.186292Z",
+     "start_time": "2023-10-14T21:04:20.180424Z"
     }
    },
    "outputs": [],
@@ -81,12 +81,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "e3f9e4a7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-14T11:12:49.469304Z",
-     "start_time": "2023-10-14T11:12:48.392781Z"
+     "end_time": "2023-10-14T21:04:20.970829Z",
+     "start_time": "2023-10-14T21:04:20.495430Z"
     }
    },
    "outputs": [],
@@ -98,12 +98,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "06af2fce",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-14T11:12:50.009652Z",
-     "start_time": "2023-10-14T11:12:49.995224Z"
+     "end_time": "2023-10-14T21:04:20.977803Z",
+     "start_time": "2023-10-14T21:04:20.970562Z"
     }
    },
    "outputs": [],
@@ -116,12 +116,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "251fc67f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-14T11:12:50.123723Z",
-     "start_time": "2023-10-14T11:12:50.110699Z"
+     "end_time": "2023-10-14T21:04:21.174820Z",
+     "start_time": "2023-10-14T21:04:21.156404Z"
     }
    },
    "outputs": [
@@ -155,8 +155,8 @@
    "id": "5f95e9e4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-14T11:42:48.895268Z",
-     "start_time": "2023-10-14T11:42:47.631972Z"
+     "end_time": "2023-10-14T21:04:24.463955Z",
+     "start_time": "2023-10-14T21:04:22.741908Z"
     }
    },
    "outputs": [
@@ -200,20 +200,21 @@
    "id": "290ba05b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-14T12:17:23.466236Z",
-     "start_time": "2023-10-14T12:17:23.421140Z"
+     "end_time": "2023-10-14T21:04:38.329842Z",
+     "start_time": "2023-10-14T21:04:38.294965Z"
     }
    },
    "outputs": [],
    "source": [
     "# ROOT_DIR = os.path.join(os.getcwd(), \"..\", \"..\")\n",
     "ROOT_DIR = os.getcwd()\n",
-    "EXPERIMENT_NAME = 'out_of_domain_uncertainty_income'\n",
+    "EXPERIMENT_NAME = 'out_of_domain_uncertainty_rich_income'\n",
     "DB_COLLECTION_NAME = 'out_of_domain_uncertainty'\n",
     "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME)\n",
-    "FAIR_INTERVENTION_PARAMS_LST = [0.0, 0.7]\n",
+    "# FAIR_INTERVENTION_PARAMS_LST = [0.0, 0.7]\n",
+    "FAIR_INTERVENTION_PARAMS_LST = [0.7]\n",
     "\n",
-    "config_yaml_path = os.path.join(ROOT_DIR, 'notebooks', EXPERIMENT_NAME, 'income_2018_config.yaml')\n",
+    "config_yaml_path = os.path.join(ROOT_DIR, 'notebooks', EXPERIMENT_NAME, 'rich_income_2018_config.yaml')\n",
     "metrics_computation_config = create_config_obj(config_yaml_path=config_yaml_path)"
    ]
   },
@@ -231,8 +232,8 @@
    "id": "f0667a83",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-14T12:17:25.416648Z",
-     "start_time": "2023-10-14T12:17:25.366893Z"
+     "end_time": "2023-10-14T21:04:40.823243Z",
+     "start_time": "2023-10-14T21:04:40.779430Z"
     }
    },
    "outputs": [
@@ -259,8 +260,8 @@
    "id": "d2cafb21",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-14T12:17:45.747476Z",
-     "start_time": "2023-10-14T12:17:45.472475Z"
+     "end_time": "2023-10-14T21:04:43.762189Z",
+     "start_time": "2023-10-14T21:04:43.518208Z"
     }
    },
    "outputs": [],
@@ -276,8 +277,8 @@
    "id": "c2c933f7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-14T12:18:00.063150Z",
-     "start_time": "2023-10-14T12:18:00.024697Z"
+     "end_time": "2023-10-14T21:04:58.404586Z",
+     "start_time": "2023-10-14T21:04:58.380344Z"
     }
    },
    "outputs": [
@@ -285,7 +286,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current session uuid:  0708a7a1-c027-4a42-96d5-0211c6580f6c\n"
+      "Current session uuid:  6bb301dd-4033-4f83-bb30-ca6726e2626a\n"
      ]
     }
    ],
@@ -294,7 +295,7 @@
     "\n",
     "custom_table_fields_dct = {\n",
     "    # 'session_uuid': str(uuid.uuid4()),\n",
-    "    'session_uuid': '0708a7a1-c027-4a42-96d5-0211c6580f6c',\n",
+    "    'session_uuid': '6bb301dd-4033-4f83-bb30-ca6726e2626a',\n",
     "}\n",
     "print('Current session uuid: ', custom_table_fields_dct['session_uuid'])"
    ]
@@ -309,12 +310,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "id": "4da761a1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-14T13:09:05.834615Z",
-     "start_time": "2023-10-14T13:09:02.694548Z"
+     "end_time": "2023-10-14T21:05:03.615444Z",
+     "start_time": "2023-10-14T21:04:59.998546Z"
     }
    },
    "outputs": [
@@ -323,7 +324,7 @@
       "text/plain": "  SCHL COW MAR  OCCP POBP RELP SEX RAC1P  AGEP  WKHP\n0   20   1   1  4000   25    1   1     1    44  60.0\n1   15   1   4  4030  329    0   2     8    37  40.0\n2   22   1   1   735  128    0   1     1    64  45.0\n3   21   1   1  4810   51    0   2     1    61  23.0\n4   23   1   1  1760  202    1   1     6    46  45.0",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>SCHL</th>\n      <th>COW</th>\n      <th>MAR</th>\n      <th>OCCP</th>\n      <th>POBP</th>\n      <th>RELP</th>\n      <th>SEX</th>\n      <th>RAC1P</th>\n      <th>AGEP</th>\n      <th>WKHP</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>20</td>\n      <td>1</td>\n      <td>1</td>\n      <td>4000</td>\n      <td>25</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>44</td>\n      <td>60.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>15</td>\n      <td>1</td>\n      <td>4</td>\n      <td>4030</td>\n      <td>329</td>\n      <td>0</td>\n      <td>2</td>\n      <td>8</td>\n      <td>37</td>\n      <td>40.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>22</td>\n      <td>1</td>\n      <td>1</td>\n      <td>735</td>\n      <td>128</td>\n      <td>0</td>\n      <td>1</td>\n      <td>1</td>\n      <td>64</td>\n      <td>45.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>21</td>\n      <td>1</td>\n      <td>1</td>\n      <td>4810</td>\n      <td>51</td>\n      <td>0</td>\n      <td>2</td>\n      <td>1</td>\n      <td>61</td>\n      <td>23.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>23</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1760</td>\n      <td>202</td>\n      <td>1</td>\n      <td>1</td>\n      <td>6</td>\n      <td>46</td>\n      <td>45.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 36,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,12 +337,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "id": "17d03c11",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-14T13:09:07.285803Z",
-     "start_time": "2023-10-14T13:09:07.244222Z"
+     "end_time": "2023-10-14T21:05:06.135796Z",
+     "start_time": "2023-10-14T21:05:06.078956Z"
     }
    },
    "outputs": [
@@ -349,7 +350,7 @@
      "data": {
       "text/plain": "(100000, 10)"
      },
-     "execution_count": 37,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,12 +361,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "id": "71325e6c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-14T13:09:11.406799Z",
-     "start_time": "2023-10-14T13:09:08.260152Z"
+     "end_time": "2023-10-14T21:05:24.515880Z",
+     "start_time": "2023-10-14T21:05:20.638039Z"
     }
    },
    "outputs": [
@@ -374,7 +375,7 @@
       "text/plain": "  SCHL COW MAR  OCCP POBP RELP SEX RAC1P  AGEP  WKHP\n0   16   1   3  4230    1    0   2     2    61  15.0\n1   23   5   1  3090  134    0   1     1    74  50.0\n2   19   1   3  9645   26    2   1     2    59  40.0\n3   14   2   5  4251    5   16   1     1    17  18.0\n4   21   1   1  1021  217    1   1     6    33  45.0",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>SCHL</th>\n      <th>COW</th>\n      <th>MAR</th>\n      <th>OCCP</th>\n      <th>POBP</th>\n      <th>RELP</th>\n      <th>SEX</th>\n      <th>RAC1P</th>\n      <th>AGEP</th>\n      <th>WKHP</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>16</td>\n      <td>1</td>\n      <td>3</td>\n      <td>4230</td>\n      <td>1</td>\n      <td>0</td>\n      <td>2</td>\n      <td>2</td>\n      <td>61</td>\n      <td>15.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>23</td>\n      <td>5</td>\n      <td>1</td>\n      <td>3090</td>\n      <td>134</td>\n      <td>0</td>\n      <td>1</td>\n      <td>1</td>\n      <td>74</td>\n      <td>50.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>19</td>\n      <td>1</td>\n      <td>3</td>\n      <td>9645</td>\n      <td>26</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n      <td>59</td>\n      <td>40.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>14</td>\n      <td>2</td>\n      <td>5</td>\n      <td>4251</td>\n      <td>5</td>\n      <td>16</td>\n      <td>1</td>\n      <td>1</td>\n      <td>17</td>\n      <td>18.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>21</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1021</td>\n      <td>217</td>\n      <td>1</td>\n      <td>1</td>\n      <td>6</td>\n      <td>33</td>\n      <td>45.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 38,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,12 +388,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
    "id": "a1dcdbee",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-14T13:09:12.076617Z",
-     "start_time": "2023-10-14T13:09:12.031514Z"
+     "end_time": "2023-10-14T21:06:06.894792Z",
+     "start_time": "2023-10-14T21:06:06.836887Z"
     }
    },
    "outputs": [
@@ -400,7 +401,7 @@
      "data": {
       "text/plain": "(100000, 10)"
      },
-     "execution_count": 39,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,12 +412,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "id": "a6af01c0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-14T13:09:15.321428Z",
-     "start_time": "2023-10-14T13:09:15.284669Z"
+     "end_time": "2023-10-14T21:06:06.944915Z",
+     "start_time": "2023-10-14T21:06:06.916645Z"
     }
    },
    "outputs": [],
@@ -442,9 +443,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "f39b4eb5",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-14T21:06:10.257974Z",
+     "start_time": "2023-10-14T21:06:10.223773Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# tuned_params_filenames = ['tuning_results_Folktables_NY_2018_Employment_alpha_0.8_20230706__115508.csv']\n",
@@ -454,9 +460,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "732c624e",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-14T21:06:10.552109Z",
+     "start_time": "2023-10-14T21:06:10.456362Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Configs for an experiment iteration\n",
@@ -464,22 +475,120 @@
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num}'\n",
     "\n",
-    "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
+    "exp_iter_data_loader = copy.deepcopy(data_loader_rich)  # Add deepcopy to avoid data leakage\n",
     "exp_extra_data_loaders = copy.deepcopy(extra_data_loaders)  # Add deepcopy to avoid data leakage\n",
     "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "id": "499c47f4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-14T11:53:30.929521Z",
-     "start_time": "2023-10-14T11:53:30.893609Z"
+     "end_time": "2023-10-14T21:14:19.956802Z",
+     "start_time": "2023-10-14T21:06:11.298067Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-10-15 00:06:11 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'dataset_split_seed': 100,\n",
+      " 'experiment_iteration': 'Exp_iter_1',\n",
+      " 'fair_intervention_params_lst': '[0.7]',\n",
+      " 'model_init_seed': 100,\n",
+      " 'session_uuid': '6bb301dd-4033-4f83-bb30-ca6726e2626a'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-10-15 00:06:12 experiment_interface.py INFO    : The dataset is preprocessed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top indexes of an X_test in a base flow dataset:  Int64Index([22422, 25747, 13795, 68724, 38923, 43064, 86918, 71138, 82508,\n",
+      "            89200, 55279,  7966, 83751, 37701,  2718, 65519, 77797,  8956,\n",
+      "            33713, 34621],\n",
+      "           dtype='int64')\n",
+      "Top indexes of an y_test in a base flow dataset:  Int64Index([22422, 25747, 13795, 68724, 38923, 43064, 86918, 71138, 82508,\n",
+      "            89200, 55279,  7966, 83751, 37701,  2718, 65519, 77797,  8956,\n",
+      "            33713, 34621],\n",
+      "           dtype='int64')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "Multiple alphas:   0%|          | 0/1 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "32ab952ade774f8189c3e4bf175bfe92"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intervention_param:  0.7\n",
+      "2023/10/15, 00:11:25: Tuning RandomForestClassifier...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-10-15 00:12:19 experiment_interface.py INFO    : Models are tuned and saved to a file\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023/10/15, 00:12:19: Tuning for RandomForestClassifier is finished [F1 score = 0.8077482472289453, Accuracy = 0.8079666666666667]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "Analyze models in one run:   0%|          | 0/1 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "78bbf9520c5f4972824dfc19a8fa2a38"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Classifiers testing by bootstrap:   0%|          | 0/5 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "08c6301d62f44734871fdd3fbf9cc94f"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "run_exp_iter_with_disparate_impact_and_mult_sets(data_loader=exp_iter_data_loader,\n",
     "                                                 extra_data_loaders=exp_extra_data_loaders,\n",
@@ -523,7 +632,7 @@
     "                         for tuned_params_filename in tuned_params_filenames]\n",
     "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num}'\n",
     "\n",
-    "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
+    "exp_iter_data_loader = copy.deepcopy(data_loader_rich)  # Add deepcopy to avoid data leakage\n",
     "exp_extra_data_loaders = copy.deepcopy(extra_data_loaders)  # Add deepcopy to avoid data leakage\n",
     "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)"
    ]
